fix: align middle for img in Avatar

--- a/client/src/components/Avatar.css
+++ b/client/src/components/Avatar.css
@@ -6,4 +6,5 @@
   width: var(--avatar-size);
   height: var(--avatar-size);
   border-radius: 50%;
+  vertical-align: middle;
 }
